UI alignment fixes for mobile in public search (#1346)

--- a/web/rainmaker/dev-packages/egov-pt-dev/src/ui-config/screens/specs/pt-mutation/index.scss
+++ b/web/rainmaker/dev-packages/egov-pt-dev/src/ui-config/screens/specs/pt-mutation/index.scss
@@ -106,6 +106,15 @@
     div#custom-atoms-rightdiv {
       width: 100%;
     }
+    .public-domain-search {
+      padding-top: 65px;
+      #material-ui-searchPropertyDetails{
+        margin-right: 0px !important;
+        margin-left: 0px !important;
+        margin-top: 10px;
+        background-color: white !important;
+       }
+    }
   }
   
   @media only screen and (min-width: 768px) {
@@ -114,5 +123,15 @@
     }
     .pt-print-button {
       margin-left: 5px;
+    }
+    .public-domain-search {
+      padding-left: 16px;
+      padding-right: 16px;
+      #material-ui-searchPropertyDetails{
+        margin-right: 0px !important;
+        margin-left: 0px !important;
+        margin-top: 10px;
+        background-color: white !important;
+       }
     }
   }
